[package]
name = "pigment64"
version = "0.4.5"
edition = "2021"
description = "A library for handling conversion between N64 texture formats and modern image formats"
repository = "https://github.com/decompals/pigment64"
license = "MIT"

[lib]
name = "pigment64"
crate-type = ["lib", "cdylib"]

[dependencies]
anyhow = "1.0.81"
byteorder = "1.5.0"
clap = { version = "4.5.4", features = ["derive"] }
num_enum = "0.7.2"
png = "0.17.13"
pyo3 = { version = "0.20.0", features = ["anyhow", "extension-module"], optional = true }
strum = "0.26.2"
strum_macros = "0.26.2"

[features]
python_bindings = ["dep:pyo3"]
