[project]
name = "pigment64"
# Version should be synced with Cargo.toml
version = "0.4.5"
description = "A library for handling conversion between N64 texture formats and modern image formats"
requires-python = ">=3.7"
dependencies = [
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.urls]
"Homepage" = "https://github.com/decompals/pigment64"
"Bug Tracker" = "https://github.com/decompals/pigment64/issues"

[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[tool.maturin]
module-name = "pigment64.pigment64"
python-source = "python"
features = ["pyo3/extension-module", "python_bindings"]
